SAM code cleanup.